--- a/src/components/boolean-input-field/boolean-input-field.html
+++ b/src/components/boolean-input-field/boolean-input-field.html
@@ -1,6 +1,6 @@
 <ion-item>
   <ion-label>Touch to select/update</ion-label>
-  <ion-select interface="action-sheet" >
+  <ion-select [(ngModel)]="inputFieldValue" interface="action-sheet" >
     <ion-option value="true">Yes</ion-option>
     <ion-option value="false">No</ion-option>
   </ion-select>
