--- a/src/components/input-container/input-container.html
+++ b/src/components/input-container/input-container.html
@@ -8,25 +8,32 @@
     </div>
 
     <div *ngIf="dataElement.optionSet" class="input-field-container">
-      <option-set-input-field [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data" [options]="dataElement.optionSet.options"></option-set-input-field>
+      <option-set-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data" [options]="dataElement.optionSet.options"></option-set-input-field>
     </div>
     <div *ngIf="!dataElement.optionSet" class="input-field-container">
-        <div *ngIf="textInputField.indexOf(dataElement.valueType) > -1">
-          <text-input-field [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data" [valueType]="dataElement.valueType"></text-input-field>
-        </div>
-        <div *ngIf="numericalInputField.indexOf(dataElement.valueType) > -1">
-          <numerical-input-field [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data" [valueType]="dataElement.valueType"></numerical-input-field>
+      <div *ngIf="textInputField.indexOf(dataElement.valueType) > -1">
+        <text-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data" [valueType]="dataElement.valueType"></text-input-field>
+      </div>
+      <div *ngIf="numericalInputField.indexOf(dataElement.valueType) > -1">
+        <numerical-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data" [valueType]="dataElement.valueType"></numerical-input-field>
+      </div>
+
+      <div *ngIf="dataElement.valueType == 'DATE'">
+        <date-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data"></date-input-field>
+      </div>
+      <div *ngIf="dataElement.valueType == 'TRUE_ONLY'">
+        <true-only-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data"></true-only-input-field>
+      </div>
+      <div *ngIf="dataElement.valueType == 'BOOLEAN'">
+        <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data"></boolean-input-field>
+      </div>
+
+      <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) == -1">
+        <div padding>
+          Currently '{{ dataElement.valueType.toLocaleLowerCase().replace('/_/g',' ')}}' as value type is not supported
         </div>
 
-        <div *ngIf="dataElement.valueType == 'DATE'">
-          <date-input-field [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data"></date-input-field>
-        </div>
-        <div *ngIf="dataElement.valueType == 'TRUE_ONLY'">
-          <true-only-input-field [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data"></true-only-input-field>
-        </div>
-        <div *ngIf="dataElement.valueType == 'BOOLEAN'">
-          <boolean-input-field [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data"></boolean-input-field>
-        </div>
+      </div>
     </div>
 
   </div>
