update upload-data-via-internet component

--- a/src/components/clear-local-data/clear-local-data.html
+++ b/src/components/clear-local-data/clear-local-data.html
@@ -16,7 +16,7 @@
             class="normalButton" ion-button small  full text-capitalize (tap)="clearDataConfirmation()">
 
       <span *ngIf="isDataCleared" >
-                    Clear data
+                    Clear Data
                   </span>
     </button>
 
