--- a/src/components/upload-data-via-sms/upload-data-via-sms.html
+++ b/src/components/upload-data-via-sms/upload-data-via-sms.html
@@ -21,33 +21,30 @@
         {{ periodLabel }}
       </div>
 
-      <div *ngIf="selectedPeriod && selectedPeriod.iso && dataSetCategoryCombo && dataSetCategoryCombo.id " >
-        <div *ngFor="let category of dataSetCategoryCombo.categories;let categoryIndex = index">
-          <div (tap)="openDataDimensionSelection(category)" class="item-card" color="font-color" full text-center text-wrap  >
-            <div style="padding-bottom: 5px;"><b>{{ category.name }}</b></div>
-            <div *ngIf="selectedDataDimension[categoryIndex]">{{ selectedDataDimension[categoryIndex].name }}</div>
-            <div *ngIf="!selectedDataDimension[categoryIndex]">Touch to select option</div>
+      <div *ngIf="selectedPeriod && selectedPeriod.iso && dataSetCategoryCombo && dataSetCategoryCombo.id ">
+        <div *ngIf="isDataSetDimensionApplicable">
+          <div *ngFor="let category of dataSetCategoryCombo.categories;let categoryIndex = index">
+            <div (tap)="openDataDimensionSelection(category)" padding-top padding-bottom class="item-card" color="font-color" full text-center text-wrap  >
+              <div style="padding-bottom: 5px;"><b>{{ category.name }}</b></div>
+              <div *ngIf="selectedDataDimension[categoryIndex]">{{ selectedDataDimension[categoryIndex].name }}</div>
+              <div *ngIf="!selectedDataDimension[categoryIndex]">Touch to select option</div>
+            </div>
           </div>
         </div>
       </div>
-      <form #f="ngForm" (ngSubmit)="goSubmit(f)">
-        <div *ngIf="isFormReady" class="item-card" full >
 
-          <!--<div><b>Organisation Unit</b> : {{ organisationUnitLabel }}<br>-->
-          <!--<b>Form</b> : {{ dataSetLabel }}<br>-->
-          <!--<b>Period</b> : {{ periodLabel }}-->
-        </div>
-
-        <div>
-          <div class="item-card">
-            <ion-input type="number" name="mobileNumber" placeholder="Mobile Number" ngModel reqired></ion-input>
+      <div *ngIf="isFormReady" class="item-card" padding-top padding-bottom full>
+        <form #f="ngForm" (ngSubmit)="goSubmit(f)">
+          <div>
+            <div class="item-card">
+              <ion-input type="number" name="mobileNumber" placeholder="Mobile Number" ngModel reqired></ion-input>
+            </div>
+            <button ion-button style="text-transform: none;" block type="submit">Moblie Number</button>
           </div>
-          <button ion-button style="text-transform: none;" block type="submit"
-                  [disabled]="canSend" >Moblie Number</button>
+        </form>
+      </div>
 
-        </div>
 
-      </form>
     </ion-col>
   </ion-row>
 
