--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -56,6 +56,7 @@ $colors: (
   light:      #f4f4f4,
   font-color: #7A7A7A,
   whitecolor: #F4F4F4,
+  icon-color : #97CBFD,
   dark:       #222,
   favorite:   #69BB7B,
   current: #ffa500
