--- a/src/components/input-container/input-container.html
+++ b/src/components/input-container/input-container.html
@@ -1,8 +1,55 @@
 
 <div *ngIf="dataElement && dataElement.categoryCombo && dataElement.categoryCombo.categoryOptionCombos">
-  <div *ngIf="formLayout == 'tableLayout'">
+  <div *ngIf="formLayout == 'tableLayout'" padding-bottom>
+  <table class="table table-bordered" width="100%" >
+      <thead>
+        <tr>
+          <th [attr.colspan]="dataElement.categoryCombo.categoryOptionCombos.length" (click)="showTooltips(dataElement,'')">
+            {{fieldLabelKey}}<span *ngIf="dataElement.description">&nbsp;&nbsp;<ion-icon color="icon-color" name="help-circle"></ion-icon></span>
+          </th>
+        </tr>
+        <tr *ngIf="dataElement.categoryCombo.name !='default'" >
+          <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos" (click)="showTooltips(dataElement,categoryOptionCombo.name)" class="inputLabel" >
+            {{  categoryOptionCombo.name }}
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos" >
 
-    {{ dataElement|json }}
+            <div *ngIf="dataElement.optionSet" class="input-field-container">
+              <option-set-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data" [options]="dataElement.optionSet.options"></option-set-input-field>
+            </div>
+            <div *ngIf="!dataElement.optionSet" class="input-field-container">
+              <div *ngIf="textInputField.indexOf(dataElement.valueType) > -1">
+                <text-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data" [valueType]="dataElement.valueType"></text-input-field>
+              </div>
+              <div *ngIf="numericalInputField.indexOf(dataElement.valueType) > -1">
+                <numerical-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data" [valueType]="dataElement.valueType"></numerical-input-field>
+              </div>
+
+              <div *ngIf="dataElement.valueType == 'DATE'">
+                <date-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data"></date-input-field>
+              </div>
+              <div *ngIf="dataElement.valueType == 'TRUE_ONLY'">
+                <true-only-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data"></true-only-input-field>
+              </div>
+              <div *ngIf="dataElement.valueType == 'BOOLEAN'">
+                <boolean-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id" [data]="data"></boolean-input-field>
+              </div>
+
+              <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) == -1">
+                <div padding>
+                  Currently '{{ dataElement.valueType.toLocaleLowerCase().replace('/_/g',' ')}}' as value type is not supported
+                </div>
+              </div>
+            </div>
+
+          </th>
+        </tr>
+      </tbody>
+    </table>
 
   </div>
   <div *ngIf="formLayout == 'listLayout'">
@@ -39,6 +86,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
 </div>
