--- a/src/components/data-set-sync/data-set-sync.html
+++ b/src/components/data-set-sync/data-set-sync.html
@@ -1,9 +1,10 @@
 
-      <div *ngFor="let dataSetId of dataSetIds" >
-        <ion-card padding>
-        <div *ngIf="dataSetsSyncObjects[dataSetId] && dataSetsSyncObjects[dataSetId].name != ''">
-          <div class="contents">
-            <ion-row>
+      <div *ngFor="let dataSetId of dataSetIds"  >
+        <!--<ion-card padding>-->
+        <hr>
+        <div *ngIf="dataSetsSyncObjects[dataSetId] && dataSetsSyncObjects[dataSetId].name != ''" >
+          <div class="contents" >
+            <ion-row >
               <ion-col col-11 (tap)="viewMoreDetailsOnEntryForm(dataSetId)">
                 <div  >
                   <p >
@@ -13,19 +14,31 @@
                 </div>
               </ion-col>
               <ion-col col-1 (tap)="dataSetDataDeleteConfirmation(dataSetsSyncObjects[dataSetId].name,dataSetId)">
-                <!--<div *ngIf="!isDataSetDataDeletionOnProgress">-->
                   <button color="danger" class="normalButton" ion-button full min clear text-capitalize >
                     <ion-icon name="md-trash"></ion-icon>
                   </button>
-                <!--</div>-->
                 <div *ngIf="isDataSetDataDeletionOnProgress[dataSetId]">
                   <page-loading loadingSize="small"></page-loading>
                 </div>
               </ion-col>
+              <div>
+              <div *ngIf="!syncProcess && syncStatus === 'Not synced'" (tap)="syncSelectedDataSetData(dataSetsSyncObjects[dataSetId])">
+                <button color="primary"  ion-button  >
+                 Sync &nbsp;&nbsp;<ion-icon name="sync"></ion-icon>
+                </button>
+              </div>
+              <div *ngIf="syncProcess">
+                <page-loading loadingSize="small"></page-loading>
+              </div>
+
+              </div>
             </ion-row>
           </div>
         </div>
-        </ion-card>
+        <!--</ion-card>-->
       </div>
+
+
+
 
 
