Update event capture UI selection

--- a/src/pages/data-element-sync/data-element-sync.scss
+++ b/src/pages/data-element-sync/data-element-sync.scss
@@ -1,3 +1,15 @@
 data-element-sync {
+  .data-set-sync-container{
+    background-color: #F4F4F4;
+  }
+  .item-md.item-block .item-inner {
+    padding-right: 0px;
+    border-bottom: 0px solid #E6E6E7;
+  }
+
+  .item-ios.item-block .item-inner {
+    padding-right: 0px;
+    border-bottom: 0px solid #E6E6E7;
+  }
 
 }
