--- a/src/pages/data-values-sync-container/data-set-sync-container.scss
+++ b/src/pages/data-values-sync-container/data-set-sync-container.scss
@@ -2,4 +2,14 @@ page-data-set-sync-container {
   .data-set-sync-container{
     background-color: #F4F4F4;
   }
+  .item-md.item-block .item-inner {
+    padding-right: 0px;
+    border-bottom: 0px solid #E6E6E7;
+  }
+
+  .item-ios.item-block .item-inner {
+    padding-right: 0px;
+    border-bottom: 0px solid #E6E6E7;
+  }
+
 }
