fix bugs on programStageElement & Sections data structure

--- a/src/pages/event-capture-form/event-capture-form.scss
+++ b/src/pages/event-capture-form/event-capture-form.scss
@@ -1,6 +1,6 @@
 page-event-capture-form {
   .event-capture-form {
-    background-color: #F4F4F4;
+    background-color: #FFFFFF;
   }
 
   .entryFormContainer{
@@ -19,7 +19,7 @@ page-event-capture-form {
   }
 
   .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
-    background-color: #F4F4F4;
+    background-color: #FFFFFF;
   }
   .item-md,.item-ios{
     border: 1px solid #E6E6E7;
