cleaning event components as well as provider for event capture

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -261,6 +261,14 @@
   margin-bottom:5px;
 }
 
+.item-card-category{
+  border: 1px solid #E6E6E7;
+  border-radius: 0.3rem;
+  padding: 5px 1px 5px;
+  margin-top:5px;
+  margin-bottom:5px;
+}
+
 .round-button{
   border-radius: 64px;
   padding-left: 2rem;
