--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -187,6 +187,11 @@
   height : 1.5rem;
 }
 
+.footer-icon{
+  width : 2rem;
+  height : 2rem;
+}
+
 .dashboard-item-icon{
   padding-top: 0.3rem;
   padding-right: 0.2rem;
