Fixing hide and show columns on event capture

--- a/src/components/warning/warning.html
+++ b/src/components/warning/warning.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="warningMessage" text-center>
+<div *ngIf="warningMessage">
   <ion-row>
     <ion-col col-1>
       <img  [src]="icon"/>
