--- a/src/pages/event-capture-register/event-capture-register.scss
+++ b/src/pages/event-capture-register/event-capture-register.scss
@@ -1,3 +1,10 @@
 page-event-capture-register {
-
+  .item-md.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #E6E6E7;
+  }
+  .item-ios.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #E6E6E7;
+  }
 }
