--- a/src/components/date-input-field/date-input-field.html
+++ b/src/components/date-input-field/date-input-field.html
@@ -1,3 +1,3 @@
 <ion-item>
-  <ion-datetime (ionChange)="updateValues()" [(ngModel)]="inputFieldValue" doneText="Update" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" ></ion-datetime>
+  <ion-datetime (ionChange)="updateValues()" placeholder="Touch to pick date"  [(ngModel)]="inputFieldValue" doneText="Update" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" ></ion-datetime>
 </ion-item>
