--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -1,2 +1,39 @@
-tracker based, coming soon<br>
-{{ programStage.repeatable |json }}
+<div *ngIf="isLoading">
+  <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></page-loading>
+</div>
+<div *ngIf="!isLoading">
+  <div >
+    <div style="float:left;width: 50%">
+      {{ programStage.executionDateLabel}}<span class="required">*</span>
+      <div class="input-field-container">
+        <ion-item>
+          <ion-datetime doneText="Update" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
+        </ion-item>
+      </div>
+    </div>
+    <div style="float:right;width: 50%">
+      {{ programStage.dueDateLabel}}<span class="required">*</span>
+      <div class="input-field-container">
+        <ion-item>
+          <ion-datetime doneText="Update" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
+        </ion-item>
+      </div>
+    </div>
+  </div>
+
+
+  <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
+    <div *ngFor="let programStageDataElement of programStage.programStageDataElements">
+      <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
+        <event-input-container [dataElement]="programStageDataElement.dataElement"
+                               [currentUser]="currentUser"
+                               [data]="dataObjectModel"
+                               [mandatory]="programStageDataElement.compulsory"
+                               (onChange)="updateData($event)"></event-input-container>
+      </div>
+    </div>
+  </div>
+  <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
+    <notification [message]="'Contact system to add data elements'"></notification>
+  </div>
+</div>
