--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -44,7 +44,9 @@
       </div>
     </div>
     <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
-      <notification [message]="'Contact system to add data elements'"></notification>
+      <div *ngIf="currentOpenEvent['eventDate'] && currentOpenEvent['eventDate'] !=''">
+        <notification [message]="'Contact system to add data elements'"></notification>
+      </div>
     </div>
   </div>
 </div>
