Update events storage structure to resolve issues on porgram stages data entry

--- a/src/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/components/program-stage-event-based/program-stage-event-based.html
@@ -3,7 +3,9 @@
 </div>
 <div *ngIf="!isLoading">
   <div>
-    {{ programStage.executionDateLabel}}<span class="required">*</span>
+    <span *ngIf="programStage.executionDateLabel == '0'">Report date</span>
+    <span *ngIf="programStage.executionDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
+    <span class="required">*</span>
   </div>
   <div class="input-field-container">
     <ion-item>
