--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -2,11 +2,11 @@
   <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></page-loading>
 </div>
 <div *ngIf="!isLoading">
-  {{ currentEvents |json }}
+  programStageSections : {{ programStage.programStageSections |json }}<br><br>
+  {{ currentEvents |json }}<br>
   <div *ngIf="!shouldAddNewEvent && (programStage.repeatable || currentEvents.length == 0)">
     <div class="item-card" (click)="createEmptyEvent()" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
       <ion-icon name="add" color="icon-color"></ion-icon>
-      Add
     </div>
   </div>
 
@@ -47,7 +47,6 @@
         <!-- in case it is repeatable stage -->
         <div *ngIf="currentOpenEvent && currentOpenEvent.dataValues && currentOpenEvent.dataValues.length > 0 && programStage.repeatable" class="item-card" (click)="addAnotherEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
           <ion-icon name="add" color="icon-color"></ion-icon>
-          Add Another
         </div>
 
       </div>
