--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -260,10 +260,18 @@
 
 .item-card{
   border: 1px solid #E6E6E7;
-  border-radius: 0.3rem;
+  border-radius: 0.1rem;
   padding: 5px 10px 5px;
   margin-top:5px;
   margin-bottom:5px;
+}
+
+.item-card-with-no-margin{
+  border: 1px solid #E6E6E7;
+  border-top: 0px;
+  border-radius: 0.1rem;
+  padding: 5px 10px 5px;
+  margin:0px;
 }
 
 .item-card-program-stage-section{
