--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -1,60 +1,79 @@
 <div *ngIf="isLoading">
   <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></page-loading>
 </div>
-<div *ngIf="!isLoading">
+<div *ngIf="!isLoading" class="over-flow-container">
   programStageSections : {{ programStage.programStageSections |json }}<br><br>
-  {{ currentEvents |json }}<br>
-  <div *ngIf="!shouldAddNewEvent && (programStage.repeatable || currentEvents.length == 0)">
-    <div class="item-card" (click)="createEmptyEvent()" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
-      <ion-icon name="add" color="icon-color"></ion-icon>
-    </div>
+  <div *ngIf="tableLayout">
+    <table class="table table-bordered" width="100%" >
+      <thead *ngIf="tableLayout && tableLayout.headers">
+      <tr >
+        <th *ngFor="let header of tableLayout.headers" >{{ header}}</th>
+      </tr>
+      </thead>
+      <tbody *ngFor="let row of tableLayout.rows;let currentIndex = index">
+        <tr [ngStyle]="{'background-color': editableRow == currentIndex ? '#b9ffb9' : '' }" (click)="openProgramStageEventEntryForm(currentIndex)">
+          <td *ngFor="let data of row">
+            {{ data }}
+          </td>
+        </tr>
+        <tr *ngIf="editableRow == currentIndex">
+          <td colspan="100%" >
+            {{ currentEvents[currentIndex]|json }}
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-
-  <div *ngIf="shouldAddNewEvent">
-    <div >
-      <div style="display: inline-block;width: 49.3%">
-        <span *ngIf="programStage.executionDateLabel == '0'">Report date</span>
-        <span *ngIf="programStage.executionDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
-        <span class="required">*</span>
-        <div class="input-field-container">
-          <ion-item>
-            <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['eventDate']" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
-          </ion-item>
-        </div>
-      </div>
-      <div style="display: inline-block;width: 49.3%">
-        <span *ngIf="programStage.dueDateLabel == '0'">Due date</span>
-        <span *ngIf="programStage.dueDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
-        <div class="input-field-container">
-          <ion-item>
-            <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['dueDate']" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
-          </ion-item>
-        </div>
-      </div>
-    </div>
-    <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
-      <div *ngIf="currentOpenEvent['eventDate'] && currentOpenEvent['eventDate'] !=''">
-        <div *ngFor="let programStageDataElement of programStage.programStageDataElements">
-          <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
-            <event-input-container [dataElement]="programStageDataElement.dataElement"
-                                   [currentUser]="currentUser"
-                                   [data]="dataObjectModel"
-                                   [mandatory]="programStageDataElement.compulsory"
-                                   (onChange)="updateData($event)"></event-input-container>
+  <div *ngIf="shouldAddNewEvent" >
+    <div class="item-card-with-no-margin">
+      <div >
+        <div style="display: inline-block;width: 49.3%">
+          <span *ngIf="programStage.executionDateLabel == '0'">Report date</span>
+          <span *ngIf="programStage.executionDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
+          <span class="required">*</span>
+          <div class="input-field-container">
+            <ion-item>
+              <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['eventDate']" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
+            </ion-item>
           </div>
         </div>
-
-        <!-- in case it is repeatable stage -->
-        <div *ngIf="currentOpenEvent && currentOpenEvent.dataValues && currentOpenEvent.dataValues.length > 0 && programStage.repeatable" class="item-card" (click)="addAnotherEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
-          <ion-icon name="add" color="icon-color"></ion-icon>
+        <div style="display: inline-block;width: 49.3%">
+          <span *ngIf="programStage.dueDateLabel == '0'">Due date</span>
+          <span *ngIf="programStage.dueDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
+          <div class="input-field-container">
+            <ion-item>
+              <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['dueDate']" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
+            </ion-item>
+          </div>
         </div>
-
+      </div>
+      <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
+        <div *ngIf="currentOpenEvent['eventDate'] && currentOpenEvent['eventDate'] !=''">
+          <div *ngFor="let programStageDataElement of programStage.programStageDataElements">
+            <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
+              <event-input-container [dataElement]="programStageDataElement.dataElement"
+                                     [currentUser]="currentUser"
+                                     [data]="dataObjectModel"
+                                     [mandatory]="programStageDataElement.compulsory"
+                                     (onChange)="updateData($event)"></event-input-container>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
+
+
     <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
       <div *ngIf="currentOpenEvent['eventDate'] && currentOpenEvent['eventDate'] !=''">
         <notification [message]="'Contact system to add data elements'"></notification>
       </div>
     </div>
   </div>
+
+  <div *ngIf="((currentOpenEvent && currentOpenEvent.dataValues && currentOpenEvent.dataValues.length > 0) || currentEvents.length > 0 )  && programStage.repeatable" class="item-card" (click)="addAnotherEvent(currentOpenEvent)" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
+    <ion-icon name="add" color="icon-color"></ion-icon>
+    Add
+  </div>
+
 </div>
