Fixing update repeatable event toggle or add new events

--- a/src/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -2,7 +2,7 @@
   <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></page-loading>
 </div>
 <div *ngIf="!isLoading">
-  programStageSections : {{ programStage.programStageSections |json }}<br><br>
+  <!--programStageSections : {{ programStage.programStageSections |json }}<br><br>-->
   <div *ngIf="tableLayout" class="over-flow-container">
     <table class="table table-bordered" width="100%" >
       <thead *ngIf="tableLayout && tableLayout.headers">
