--- a/src/components/tracker-event-container/tracker-event-container.html
+++ b/src/components/tracker-event-container/tracker-event-container.html
@@ -1,36 +1,34 @@
 
-<div class="item-card-with-no-margin">
-  <div >
-    <div style="display: inline-block;width: 49.3%">
-      <span *ngIf="programStage.executionDateLabel == '0'">Report date</span>
-      <span *ngIf="programStage.executionDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
-      <span class="required">*</span>
-      <div class="input-field-container">
-        <ion-item>
-          <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['eventDate']" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
-        </ion-item>
-      </div>
-    </div>
-    <div style="display: inline-block;width: 49.3%">
-      <span *ngIf="programStage.dueDateLabel == '0'">Due date</span>
-      <span *ngIf="programStage.dueDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
-      <div class="input-field-container">
-        <ion-item>
-          <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['dueDate']" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
-        </ion-item>
-      </div>
+<div padding-top>
+  <div style="display: inline-block;width: 49.3%">
+    <span *ngIf="programStage.executionDateLabel == '0'">Report date</span>
+    <span *ngIf="programStage.executionDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
+    <span class="required">*</span>
+    <div class="input-field-container">
+      <ion-item>
+        <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['eventDate']" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
+      </ion-item>
     </div>
   </div>
-  <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
-    <div *ngIf="currentOpenEvent['eventDate'] && currentOpenEvent['eventDate'] !=''">
-      <div *ngFor="let programStageDataElement of programStage.programStageDataElements">
-        <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
-          <event-input-container [dataElement]="programStageDataElement.dataElement"
-                                 [currentUser]="currentUser"
-                                 [data]="dataObjectModel"
-                                 [mandatory]="programStageDataElement.compulsory"
-                                 (onChange)="updateData($event)"></event-input-container>
-        </div>
+  <div style="display: inline-block;width: 49.3%">
+    <span *ngIf="programStage.dueDateLabel == '0'">Due date</span>
+    <span *ngIf="programStage.dueDateLabel !='0'">{{ programStage.executionDateLabel }}</span>
+    <div class="input-field-container">
+      <ion-item>
+        <ion-datetime doneText="Update" [(ngModel)]="currentOpenEvent['dueDate']" placeholder="Touch to pick date" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD"></ion-datetime>
+      </ion-item>
+    </div>
+  </div>
+</div>
+<div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
+  <div *ngIf="currentOpenEvent['eventDate'] && currentOpenEvent['eventDate'] !=''">
+    <div *ngFor="let programStageDataElement of programStage.programStageDataElements">
+      <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
+        <event-input-container [dataElement]="programStageDataElement.dataElement"
+                               [currentUser]="currentUser"
+                               [data]="dataObjectModel"
+                               [mandatory]="programStageDataElement.compulsory"
+                               (onChange)="updateData($event)"></event-input-container>
       </div>
     </div>
   </div>
